--- a/css/style.css
+++ b/css/style.css
@@ -5,23 +5,25 @@
   --primario: #784d3c;
   --blanco: #ffffff;
   --negro: #000000;
+  --gris: #e1e1e1;
 }
 
 html {
   box-sizing: border-box;
-  font-size: 62.5%;
+  font-size: 62.5%; /* 1rem 0 10px */
 }
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
   font-family: var(--fuenteParrafos);
   font-size: 1.6rem;
-  line-height: 2;
 }
 
 /* Globales */
@@ -65,14 +67,6 @@ img {
 
 /* Utilidades */
 
-.no-margin {
-  margin: 0;
-}
-
-.no-pading {
-  padding: 0;
-}
-
 .centrar-texto {
   text-align: center;
 }
@@ -92,38 +86,17 @@ img {
   margin-top: 5rem;
 }
 
-@media (min-width: 768px) {
-  .header__texto {
-    margin-top: 15rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .barra {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-}
-
 .logo {
   color: var(--blanco);
 }
 
 .logo__nombre {
   font-weight: 400;
+  margin-top: 0;
 }
 
 .logo__bold {
   font-weight: 700;
-}
-
-@media (min-width: 768px) {
-  .navegacion {
-    display: flex;
-    gap: 2rem;
-    font-weight: 400;
-  }
 }
 
 .navegacion__enlace {
@@ -131,4 +104,87 @@ img {
   text-align: center;
   font-size: 1.8rem;
   color: var(--blanco);
+}
+.entrada {
+  border-bottom: 0.1rem solid var(--gris);
+  margin-bottom: 2rem;
+}
+
+.entrada:last-of-type {
+  border-bottom: none;
+  margin-bottom: 0;
+}
+
+.boton {
+  display: block;
+  font-family: var(--fuenteheading);
+  text-align: center;
+  padding: 1rem 3rem;
+  color: var(--blanco);
+  border-radius: 0.3rem;
+  margin: 2rem;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.boton__primario {
+  background-color: var(--negro);
+}
+
+.boton__secundario {
+  background-color: var(--primario);
+}
+
+.cursos {
+  list-style: none;
+}
+
+.widget-cursos {
+  border-bottom: 0.1rem solid var(--gris);
+  margin-bottom: 2rem;
+}
+
+.widget-cursos:last-of-type {
+  border: none;
+  margin: 0;
+}
+
+.widget-cursos__label {
+  font-family: var(--fuenteheading);
+  font-weight: bold;
+}
+
+.widget-cursos__info {
+  font-weight: normal;
+}
+
+/* Media Queri */
+
+@media (min-width: 768px) {
+  .contenido__principal {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    column-gap: 2rem;
+  }
+
+  .header__texto {
+    margin-top: 15rem;
+  }
+
+  .barra {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .navegacion {
+    display: flex;
+    gap: 2rem;
+    font-weight: 400;
+  }
+
+  .boton {
+    display: inline-block;
+  }
 }
